--- a/contact.html
+++ b/contact.html
@@ -44,24 +44,11 @@
     }
 
     .card {
-      background: linear-gradient(180deg, rgba(255, 255, 255, .96), rgba(255, 255, 255, .86));
+      background: linear-gradient(180deg, color-mix(in oklab, var(--surface) 96%, transparent), color-mix(in oklab, var(--surface) 86%, transparent));
       border: 1px solid var(--ring);
       border-radius: 18px;
       padding: 20px 22px;
-      box-shadow: 0 18px 38px rgba(12, 21, 33, .08), 0 2px 6px rgba(12, 21, 33, .05);
-      color: var(--text)
-    }
-
-    :root[data-theme="lando"] .card {
-      background: linear-gradient(180deg, #232325, #1a1a1c);
-      border-color: #3a3a3d;
-      color: #fffaf1
-    }
-
-    :root[data-theme="carlos"] .card {
-      background: linear-gradient(180deg, #ffffff, #eef3ff);
-      border-color: #b7c7f7;
-      color: #0b1220
+      box-shadow: 0 18px 38px rgba(12, 21, 33, .08), 0 2px 6px rgba(12, 21, 33, .05)
     }
 
     .card h2 {
@@ -177,6 +164,12 @@
       margin-top: 8px
     }
 
+    .links-stack {
+      display: grid;
+      gap: 12px;
+      margin-top: 8px
+    }
+
     .linkcard {
       display: flex;
       align-items: center;
@@ -189,15 +182,9 @@
       color: inherit
     }
 
-    .links-stack {
-      display: grid;
-      gap: 12px;
-      margin-top: 8px
-    }
-
-    .linkcard img {
-      width: 24px;
-      height: 24px
+    .linkcard:hover {
+      transform: translateY(-1px);
+      box-shadow: 0 10px 20px rgba(12, 21, 33, .06)
     }
 
     .links-small {
@@ -207,6 +194,9 @@
     }
 
     footer {
+      border-top: 1px solid var(--ring);
+      padding: 18px 0;
+      color: var(--muted);
       text-align: center
     }
   </style>
@@ -218,22 +208,21 @@
       <div class="brand">
         <div class="avatar-wrap">
           <img class="avatar" src="assets/img/me.png" alt="Katherine Avatar">
-          <span class="avatar-badge">KC</span>
+          <span class="avatar-badge"></span>
         </div>
         <span>Contact — Pole Position🏁</span>
       </div>
       <nav class="nav">
         <a href="index.html">Home</a>
-        <a href="projects.html">Projects</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <a href="projects.html" class="cta">Projects</a>
+        <a href="about.html" class="cta">About</a>
+        <a href="contact.html" class="cta">Contact</a>
       </nav>
     </div>
   </header>
 
   <main class="page container">
     <h1>Let’s Build Something Great</h1>
-
     <div class="driver-bar">
       <span>Favorite drivers:</span>
       <button class="btn" data-theme="carlos">Carlos Sainz Jr.</button>
@@ -292,7 +281,6 @@
             <strong>Template</strong> will pre-fill the subject and message.</div>
         </div>
       </article>
-
       <article class="card">
         <h2>Direct Links</h2>
         <div class="links-stack">
@@ -325,15 +313,14 @@
     document.getElementById('year').textContent = new Date().getFullYear();
     document.querySelectorAll('button[data-theme]').forEach(b => b.addEventListener('click', () => setThemeAndConfetti(b.dataset.theme)));
     document.getElementById('resetTheme').addEventListener('click', resetTheme);
-
-    const topicWrap = document.getElementById('topicWrap'), subjectEl = document.getElementById('subject'), urgencyEl = document.getElementById('urgency'), msgEl = document.getElementById('message'); let topic = "";
-    topicWrap.addEventListener('click', (e) => { const b = e.target.closest('.chip'); if (!b) return;[...topicWrap.querySelectorAll('.chip')].forEach(c => c.classList.remove('active')); b.classList.add('active'); topic = b.dataset.topic; if (!subjectEl.value) { const urg = urgencyEl.value ? ` — ${urgencyEl.value}` : ""; subjectEl.value = `${topic}${urg}` } if (!msgEl.value) { msgEl.value = `Hi Katherine —\n\nI’m reaching out about ${topic.toLowerCase()}. My timeline is ${urgencyEl.value || "flexible"}.\n\nBest,\n[Your name]` } });
+    const topicWrap = document.getElementById('topicWrap'), subjectEl = document.getElementById('subject'), urgencyEl = document.getElementById('urgency'), msgEl = document.getElementById('message');
+    let topic = ""; topicWrap.addEventListener('click', (e) => { const b = e.target.closest('.chip'); if (!b) return;[...topicWrap.querySelectorAll('.chip')].forEach(c => c.classList.remove('active')); b.classList.add('active'); topic = b.dataset.topic; if (!subjectEl.value) { const urg = urgencyEl.value ? ` — ${urgencyEl.value}` : ""; subjectEl.value = `${topic}${urg}` } if (!msgEl.value) { msgEl.value = `Hi Katherine —\n\nI’m reaching out about ${topic.toLowerCase()}. My timeline is ${urgencyEl.value || "flexible"}.\n\nBest,\n[Your name]` } })
     function updateSubjectForUrgency() { const urg = urgencyEl.value; if (!subjectEl.value || /^([A-Za-z ]+)( — .+)?$/.test(subjectEl.value)) { const base = topic || "Opportunity"; subjectEl.value = urg ? `${base} — ${urg}` : base } }
     urgencyEl.addEventListener('change', updateSubjectForUrgency);
-    const templates = { intro: `Hi Katherine —\n\nQuick hello. Timeline: ${urgencyEl.value || "flexible"}.\n\nBest,\n[Your name]`, collab: `Hi Katherine —\n\nCollaboration idea around ${topic || "a feature"}.\nTimeline: ${urgencyEl.value || "flexible"}.\n\nThanks!\n[Your name]`, recruiter: `Hi Katherine —\n\nI think your background could match roles we have. Timeline: ${urgencyEl.value || "this month"}.\n\nBest,\n[Recruiter]`, feedback: `Hi Katherine —\n\nTried your project—feedback below.\nTimeline: ${urgencyEl.value || "whenever"}.\n\nCheers,\n[Your name]` };
-    document.getElementById('applyTemplate').addEventListener('click', () => { const k = (document.getElementById('template').value || "").toLowerCase(); if (!k) return; msgEl.value = templates[k] || msgEl.value; if (!subjectEl.value) { const base = (k === "collab" ? "Collaboration" : k === "recruiter" ? "Recruiting" : k === "feedback" ? "Feedback" : "Intro"); subjectEl.value = topic ? `${base}: ${topic}` : base } });
-    document.getElementById('buildMail').addEventListener('click', () => { const to = "katisabela125@gmail.com"; const subj = encodeURIComponent(subjectEl.value || "Hello from your site"); const body = encodeURIComponent(msgEl.value || "Hi Katherine —"); window.location.href = `mailto:${to}?subject=${subj}&body=${body}` });
-    document.getElementById('copyAll').addEventListener('click', async () => { const all = `To: katisabela125@gmail.com\nSubject: ${subjectEl.value || "(none)"}\n\n${msgEl.value || ""}`; try { await navigator.clipboard.writeText(all); alert("Copied to clipboard!") } catch { alert("Could not copy, sorry.") } });
+    const templates = { intro: () => `Hi Katherine —\n\nQuick hello. Timeline: ${urgencyEl.value || "flexible"}.\n\nBest,\n[Your name]`, collab: () => `Hi Katherine —\n\nCollaboration idea around ${topic || "a feature"}.\nTimeline: ${urgencyEl.value || "flexible"}.\n\nThanks!\n[Your name]`, recruiter: () => `Hi Katherine —\n\nI think your background could match roles we have. Timeline: ${urgencyEl.value || "this month"}.\n\nBest,\n[Recruiter]`, feedback: () => `Hi Katherine —\n\nTried your project—feedback below.\nTimeline: ${urgencyEl.value || "whenever"}.\n\nCheers,\n[Your name]` };
+    document.getElementById('applyTemplate').addEventListener('click', () => { const k = (document.getElementById('template').value || "").toLowerCase(); if (!k) return; msgEl.value = templates[k]() || msgEl.value; if (!subjectEl.value) { const base = k === "collab" ? "Collaboration" : k === "recruiter" ? "Recruiting" : k === "feedback" ? "Feedback" : "Intro"; subjectEl.value = topic ? `${base}: ${topic}` : base } })
+    document.getElementById('buildMail').addEventListener('click', () => { const to = "katisabela125@gmail.com"; const subj = encodeURIComponent(subjectEl.value || "Hello from your site"); const body = encodeURIComponent(msgEl.value || "Hi Katherine —"); window.location.href = `mailto:${to}?subject=${subj}&body=${body}` })
+    document.getElementById('copyAll').addEventListener('click', async () => { const all = `To: katisabela125@gmail.com\nSubject: ${subjectEl.value || "(none)"}\n\n${msgEl.value || ""}`; try { await navigator.clipboard.writeText(all); alert("Copied to clipboard!") } catch { alert("Could not copy, sorry.") } })
   </script>
 </body>
 
