badge appearance, icon appearance (part 10)

--- a/index.html
+++ b/index.html
@@ -238,10 +238,13 @@
       <div>© <span id="year"></span> Katherine Chen • Built with HTML/CSS/JS • Deployed on GitHub Pages</div>
       <div class="footer-launch">
         <span class="flag-label">Start the sequence →</span>
-        <button class="flag-btn" id="flagGo" title="Start lights + wave flag">🏁</button>
+        <button class="flag-btn" id="flagGo" title="Start lights + wave flag">
+          <img src="assets/img/Flag.svg" alt="Start" width="22" height="22">
+        </button>
       </div>
     </div>
   </footer>
+
 
   <div class="sequence-overlay" id="seqOverlay">
     <div class="sequence">
