change API call to random call, and fix other bugs

--- a/about.html
+++ b/about.html
@@ -5,11 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About — Katherine Isabela Hsiung Chen</title>
-  <link rel="icon" type="image/svg+xml"
-    href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect fill='%23ffffff' x='0' y='0' width='64' height='64' rx='12'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Georgia, serif' font-size='36' font-weight='700' fill='%230d347e'%3EKC%3C/text%3E%3C/svg%3E">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;600;700&display=swap"
-    rel="stylesheet">
+  <link rel="icon" type="image/png" href="assets/img/KC.png?v=2">
+  <link rel="apple-touch-icon" href="assets/img/KC.png?v=2">
   <link rel="stylesheet" href="assets/css/base.css">
   <style>
     .page {
@@ -140,7 +137,7 @@
       <div class="brand">
         <div class="avatar-wrap">
           <img class="avatar" src="assets/img/me.png" alt="Katherine Avatar">
-          <span class="avatar-badge">KC</span>
+          <span class="avatar-badge"></span>
         </div>
         <span>About — Pole Position🏁</span>
       </div>
