--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Katherine Isabela Hsiung Chen — Pole Position 🏁</title>
-  <link rel="icon" type="image/svg+xml"
-    href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect fill='%23ffffff' x='0' y='0' width='64' height='64' rx='12'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Georgia, serif' font-size='36' font-weight='700' fill='%230d347e'%3EKC%3C/text%3E%3C/svg%3E">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;600;700&display=swap"
-    rel="stylesheet">
+  <link rel="icon" type="image/png" href="assets/img/KC.png?v=2">
+  <link rel="apple-touch-icon" href="assets/img/KC.png?v=2">
   <link rel="stylesheet" href="assets/css/base.css">
   <style>
     .hero {
@@ -32,46 +29,6 @@
       flex-wrap: wrap;
       justify-content: center;
       color: var(--muted)
-    }
-
-    .hub {
-      display: flex;
-      gap: 16px;
-      flex-wrap: wrap;
-      justify-content: center;
-      margin-top: 22px
-    }
-
-    .cta {
-      cursor: pointer;
-      display: inline-block;
-      text-decoration: none;
-      font-weight: 800;
-      letter-spacing: .2px;
-      color: var(--text);
-      background: linear-gradient(180deg, color-mix(in oklab, var(--surface, #fff) 96%, transparent), color-mix(in oklab, var(--surface, #fff) 88%, transparent));
-      border-style: solid;
-      border-width: 4px 1.5px;
-      border-top-color: var(--accent);
-      border-bottom-color: var(--accent);
-      border-left-color: color-mix(in oklab, var(--accent) 28%, var(--ring));
-      border-right-color: color-mix(in oklab, var(--accent) 28%, var(--ring));
-      border-radius: 12px;
-      padding: 14px 26px;
-      transition: transform .12s, box-shadow .2s, border-color .2s, background .2s;
-      box-shadow: 0 12px 28px rgba(12, 21, 33, .10), inset 0 0 0 1px color-mix(in oklab, var(--accent) 18%, #fff)
-    }
-
-    .cta:hover {
-      transform: translateY(-2px);
-      background: linear-gradient(180deg, color-mix(in oklab, var(--surface, #fff) 98%, transparent), color-mix(in oklab, var(--surface, #fff) 92%, transparent))
-    }
-
-    :root[data-theme="lando"] .cta {
-      border-top-color: #ff8000;
-      border-bottom-color: #ff8000;
-      border-left-color: #3a3a3d;
-      border-right-color: #3a3a3d
     }
 
     .sequence-overlay {
@@ -192,6 +149,19 @@
       color: #9aa0a6;
       background: #fff
     }
+
+    .flag {
+      display: inline-flex;
+      align-items: center;
+      gap: 6px
+    }
+
+    .flag img {
+      width: 18px;
+      height: 18px;
+      border-radius: 2px;
+      vertical-align: -3px
+    }
   </style>
 </head>
 
@@ -201,7 +171,7 @@
       <div class="brand">
         <div class="avatar-wrap">
           <img class="avatar" src="assets/img/me.png" alt="Katherine Avatar">
-          <span class="avatar-badge">KC</span>
+          <span class="avatar-badge"></span>
         </div>
         <span>Katherine — Pole Position🏁</span>
       </div>
@@ -218,28 +188,48 @@
     <div class="container">
       <h1>Hi, I’m Katherine — Computer Science student (soon Simulation Engineering) building playful-aesthetic code.
       </h1>
-      <div class="driver-bar" style="margin-top:10px">
+      <div class="driver-bar">
         <span>Favorite drivers:</span>
         <button class="btn" data-theme="carlos">Carlos Sainz Jr.</button>
         <button class="btn" data-theme="lando">Lando Norris</button>
         <button class="btn" id="resetTheme">Reset theme</button>
         <span>(themed confetti)</span>
       </div>
-      <div class="hub">
-        <a class="cta" href="projects.html">My Projects</a>
-        <a class="cta" href="about.html">About</a>
-        <a class="cta" href="contact.html">Contact</a>
+      <div class="png-hub">
+        <a class="png-btn" href="projects.html">
+          <span class="png-stack">
+            <img data-theme="base" src="assets/img/pixels/btn-projects.png" alt="Projects">
+            <img data-theme="carlos" src="assets/img/pixels/btn-projects-carlos.png" alt="Projects">
+            <img data-theme="lando" src="assets/img/pixels/btn-projects-lando.png" alt="Projects">
+          </span>
+        </a>
+        <a class="png-btn" href="about.html">
+          <span class="png-stack">
+            <img data-theme="base" src="assets/img/pixels/btn-about.png" alt="About">
+            <img data-theme="carlos" src="assets/img/pixels/btn-about-carlos.png" alt="About">
+            <img data-theme="lando" src="assets/img/pixels/btn-about-lando.png" alt="About">
+          </span>
+        </a>
+        <a class="png-btn" href="contact.html">
+          <span class="png-stack">
+            <img data-theme="base" src="assets/img/pixels/btn-contact.png" alt="Contact">
+            <img data-theme="carlos" src="assets/img/pixels/btn-contact-carlos.png" alt="Contact">
+            <img data-theme="lando" src="assets/img/pixels/btn-contact-lando.png" alt="Contact">
+          </span>
+        </a>
       </div>
     </div>
   </section>
 
   <footer>
     <div class="container footer-row">
-      <div>© <span id="year"></span> Katherine Chen • Built with HTML/CSS/JS • Deployed on GitHub Pages</div>
+      <div class="footer-spacer"></div>
+      <div class="footer-text">© <span id="year"></span> Katherine Chen • Built with HTML/CSS/JS • Deployed on GitHub
+        Pages</div>
       <div class="footer-launch">
         <span class="flag-label">Start the sequence →</span>
         <button class="flag-btn" id="flagGo" title="Start lights + wave flag">
-          <img src="assets/img/Flag.svg" alt="Start" width="22" height="22">
+          <img src="assets/img/flags/Flag.svg" alt="" width="22" height="22">
         </button>
       </div>
     </div>
@@ -249,8 +239,11 @@
     <div class="sequence">
       <div class="sequence-card">
         <div class="start-lights" id="startLights">
-          <span class="light" id="L1"></span><span class="light" id="L2"></span><span class="light" id="L3"></span><span
-            class="light" id="L4"></span><span class="light" id="L5"></span>
+          <span class="light" id="L1"></span>
+          <span class="light" id="L2"></span>
+          <span class="light" id="L3"></span>
+          <span class="light" id="L4"></span>
+          <span class="light" id="L5"></span>
         </div>
         <div class="seq-title" id="seqTitle">Lights out and away we go!</div>
         <div class="seq-sub" id="seqSub">Tap again to replay</div>
@@ -261,7 +254,7 @@
             <div class="win-tags">
               <span class="tag" id="winNum"></span>
               <span class="tag" id="winTeam"></span>
-              <span class="tag" id="winNat"></span>
+              <span class="tag flag" id="winNat"></span>
             </div>
             <div class="seq-sub" id="winGP" style="text-align:left;margin-top:6px"></div>
           </div>
