--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <img class="avatar" src="assets/img/me.png" alt="Katherine Avatar">
           <span class="avatar-badge"></span>
         </div>
-        <span>Katherine — Pole Position🏁</span>
+        <span>Katherine Isabela Hsiung Chen — Pole Position🏁</span>
       </div>
       <nav class="nav">
         <a href="index.html">Home</a>
