--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Projects — Katherine</title>
+  <title>Projects — Pole Position 🏁</title>
    <link rel="icon" type="image/png" href="assets/img/KC.png?v=2">
   <link rel="apple-touch-icon" href="assets/img/KC.png?v=2">
   <link rel="stylesheet" href="assets/css/base.css">
