added pole position to projects screen

--- a/projects.html
+++ b/projects.html
@@ -145,7 +145,7 @@
           <img class="avatar" src="assets/img/me.png" alt="Katherine Avatar">
           <span class="avatar-badge"></span>
         </div>
-        <span>Projects</span>
+        <span>Projects — Pole Position🏁</span>
       </div>
       <nav class="nav">
         <a href="index.html">Home</a>
