--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
   <section class="hero">
     <div class="container">
-      <h1>Hi, I’m Katherine — Computer Science student (soon Simulation Engineering) building playful-aesthetic code.
+      <h1>Hi, I’m Katherine - Computer Science student (soon Simulation Engineering) building playful-aesthetic code.
       </h1>
       <div class="driver-bar">
         <span>Favorite drivers:</span>
