--- a/projects.html
+++ b/projects.html
@@ -196,7 +196,7 @@
         <div class="tags"><span class="tag">React Native</span><span class="tag">TypeScript</span><span
             class="tag">Google Cloud</span><span class="tag">Xcode (iOS)</span></div>
         <div class="linkrow"><a class="code-link" href="https://github.com/Katechen125/Pathfinder" target="_blank">💻
-            Code</a><span class="sep">•</span><a class="video-link" href="YOUR_DEMO_LINK_PATHFINDER" target="_blank">🎥
+            Code</a><span class="sep">•</span><a class="video-link" href="https://www.youtube.com/playlist?list=PLcprPtzWKe_yDr-mHER8Ew9LGg2TBSMJL" target="_blank">🎥
             Demo</a></div>
       </article>
 
